--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,14 +6,12 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '36 2 * * *'
   push:
-    branches: [ "pre-release" ]
+    branches: [ "main", "pre-release" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ "pre-release" ]
+    branches: [ "main", "pre-release" ]
 
 env:
   # Use docker.io for Docker Hub if empty
